# datasette-enrichments-quickjs

./: README.md  pyproject.toml
datasette_enrichments_quickjs/: __init__.py
datasette_enrichments_quickjs/templates/: enrichment-quickjs.html
tests/: test_enrichments_quickjs.py
