[project]
name = "datasette-enrichments-quickjs"
version = "0.1"
description = "Enrich data with a custom JavaScript function"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette",
    "datasette-enrichments",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-enrichments-quickjs"
Changelog = "https://github.com/datasette/datasette-enrichments-quickjs/releases"
Issues = "https://github.com/datasette/datasette-enrichments-quickjs/issues"
CI = "https://github.com/datasette/datasette-enrichments-quickjs/actions"

[project.entry-points.datasette]
enrichments_quickjs = "datasette_enrichments_quickjs"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
